# motion-control-101

./: .gitignore  CLAUDE.md  pyproject.toml
biped_walker/: biped.urdf  biped_urdf.py  pattern_generator.py  sim_stand_balance.py  sim_walker.py
doc/: biped_standup_balance_notes.md  motion_control_practice_guide.md  pybullet_stand_balance_workflow.md  pybullet_stand_vs_walk_comparison.md
homework/phase2/: preview_control_openloop.py  preview_control_summary.md
lipm_and_zmp/: lipm_and_zmp.py
mpc/: phase1_lqr_sim.py  phase2_mpc_sim.py  phase3_2_state_constraint_sim.py  phase3_constraint_sim.py  phase4_n_tradeoff.py
mpc/controllers/: lqr.py  mpc.py
mpc/doc/: ZOH.md  lineal_dynamic_model.md  qp_matrix_notes.md  task.md
mpc/models/: cartpole.xml
mpc_and_wbc/doc/: Centroidal Dynamics.md  coordinate_systems.md  mpc_formulation.md  robot_model_api_reference.md  task.md
mpc_and_wbc/week10_single_leg_stand/: config.py  main.py  mpc.py  robot_model.py  state_estimator.py  utils.py  wbc.py
notes/: LESSONS_LEARNED.md  REFERENCES.md  debug_notes_cartpole_fix.md  robot_simulation_basics.md
phase1_pybullet/01_biped_balance/: GRADUAL_APPROACH.md  LESSONS_LEARNED.md  README.md  biped_balance.py  biped_balance_final.py  biped_balance_simple.py  biped_balance_stable.py  biped_balance_v2.py  biped_balance_working.py  cartpole_balance.py  cartpole_simple.py  test_ankle_pd.py
wbc/: arm_model.py  multi_task_ik.py  notes.md  sim_config.py  simulator.py
wbc/doc/: notes.md  qp_review_report.md  qp_task.md  task.md
(+2 files in other folders)
