[project]
name = "motion-control-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "osqp>=1.1.1",
    "pybullet>=3.2.7",
    "pybullet-envs-gymnasium>=0.6.0",
]
